		registers; implementing specifics for MIPS and M88K.
		Enabling simple variable assignment [again].
		Implementing (in a ugly hack-ish way) serialization support
		for the RAM component, using a "custom" StateVariable type.
		Beginning to implement a "pre run check" mechanism.
20090720	Implementing PreRunCheck for CPU components (they need to have
		an address/data bus, either as a child or as a parent, to run).
20090721	Implementing PreRunCheck for MainBusComponent.
		At startup, a suitable part of the component tree is now shown.
		Adding a GenerateShortestPossiblePath method on Component.
		Adding a helper for outputting pre-0.6.0 style debug messages
		from components ("[ componentname: message ]").
		Tab completion (in the CommandInterpreter) now uses shortest
		path, whenever possible, instead of full paths.
20090722	Implementing a new concept of "on reset commands"; beginning on
		extending the ELF loader for symbol loading support.
20090723	Moving 'step' and 'time' concepts from the GXemul class to a
		new component, the RootComponent.
		Minor configure script fixes (allow --without-unittests etc.).
		Removing the "NotRunning" run state.
		Adding dummy "step", "backward-step", and "continue-backwards"
		commands.
		Implementing support for re-executing commands without args
		("step" and "backward-step" so far).
20090724	The CPUComponent's .unassemble and .dump methods, and the
		RAMComponent's .dump method, are now also re-executable.
		CPU endianness is now serialized (as a bool, not enum).
		Beginning to work on cycle execution!
20090725	The step command now takes an argument (default is 1).
20090726	Removing the "global time" concept.
		Adding a helper for debug message indentation.
		Adding an "accuracy" variable to the RootComponent, which must
		be set to either "cycle" or "sloppy".
		Implementing pre-run-checks for M88K and MIPS cpus, for
		checking the r0 and zr registers, respectively.