@@ -3931,3 +3931,5 @@ Changelog for GXemul:
 		be set to either "cycle" or "sloppy".
 		Implementing pre-run-checks for M88K and MIPS cpus, for
 		checking the r0 and zr registers, respectively.
+20090727	When single-stepping, all state change (except for Custom
+		StateVariables such as RAM contents) is now displayed.
